--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello World</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
-  <body>
+  <body class="m-0">
     <div id="root">
       <h1 id="heading">Not Rendered!!</h1>
     </div>
